# nixpr-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml  shell.nix
.github/workflows/: rust.yml
src/: cli.rs  config.rs  github.rs  main.rs  runner.rs  state.rs
