[package]
name = "nixpr"
version = "0.1.0"
edition = "2024"
description = "Automatically review NixOS/nixpkgs pull requests via GitHub Actions"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
